bargain & store promotions

--- a/app/views/barcategories/_form.html.erb
+++ b/app/views/barcategories/_form.html.erb
@@ -1,15 +1,16 @@
+<div class="hotdeal_form">
+  <%= simple_form_for(@barcategory) do |f| %>
+    <%= f.error_notification %>
+    <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
-<%= simple_form_for(@barcategory) do |f| %>
-  <%= f.error_notification %>
-  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
-
-  <div class="form-inputs">
-    <%= f.input :name %>
-    <%= f.input :description %>
+    <div class="basic_info">
+      <%= f.input :name %>
+      <%= f.input :description %>
+    </div>
     <%= f.input :display_in_navbar %>
-  </div>
 
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
-<% end %>
+    <div class="form-actions">
+      <%= f.button :submit %>
+    </div>
+  <% end %>
+</div>
