--- a/app/views/barcategories/edit.html.erb
+++ b/app/views/barcategories/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing Barcategory</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @barcategory %> |
-<%= link_to 'Back', barcategories_path %>
+<div class="layout">
+  <div class="wrap">
+    <h1>Editing Barcategory</h1>
+    <%= render 'form' %>
+    <%= link_to 'Show', @barcategory %> |
+    <%= link_to 'Back', barcategories_path %>
+  </div>
+</div>
