--- a/app/views/bargains/new.html.erb
+++ b/app/views/bargains/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Bargain</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', bargains_path %>
+<div class="layout"><!--layout-->
+  <div class="wrap">
+    <h1>New Bargain</h1>
+    <%= render 'form' %>
+    <%= link_to 'Back', bargains_path %>
+  </div>
+</div>
