--- a/app/views/storepromotions/_form.html.erb
+++ b/app/views/storepromotions/_form.html.erb
@@ -15,6 +15,7 @@
         <!-- <%= f.input :sp_spare_40, label: 'List Price' %> -->
         <!-- <%= f.input :sp_spare_41, label: 'Current Price' %> -->
         <%= f.input :sp_percentage_01, label: 'Up to Percentage' %>
+        <%= f.input :sp_spare_03, label: 'Up to Price' %>
         <!-- <%= f.input :sp_percentage_02, label: 'Percentage' %> -->
       </div>
       <div class="pricing clearfix">
