--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -512,8 +512,8 @@ header .gnb_m,header .gnb_open2{display:none;}
 .about_us .qna a{font-size:25px;text-decoration:none;background:#08f;color:#fff;padding:5px 20px;margin-right:10px;float:right;border-radius:10px;}
 
 @media screen and (max-width:640px){
-  .about_us{width:100%;margin-top:100px;}
-  .about_us .sections{margin-bottom:50px;}
+  .about_us{width:100%;margin-top:30px;}
+  .about_us .sections{margin:10px;}
   .about_us .headline{font-size:65px;margin-bottom:-10px;}
   .about_us .headline em a{font-size:25px;color:#fff;}
   .about_us h2{font-size:15px;}
@@ -523,6 +523,7 @@ header .gnb_m,header .gnb_open2{display:none;}
   .about_us .mission .left,
   .about_us .mission .right{float:none;width:100%;margin:0;}
   .about_us .qna p{padding:0;}
+  .about_us .qna a{width:100%;font-size:19px;display:block;margin:0;}
 }
 
 @media screen and (min-width:641px) and (max-width:1199px){
@@ -683,8 +684,8 @@ header .gnb_m,header .gnb_open2{display:none;}
 .set_search_box .feild_wrap .pricing_box{margin:15px 0;}
 .set_search_box .feild_wrap .pricing_box .price{float:left;width:45%;}
 .set_search_box .feild_wrap .keyword_box input{float:left;background:#fff;width:45%;height:40px;border:1px solid #e3e3e3;border-radius:5px;padding:0 10px;}
-.set_search_box .feild_wrap .pricing_box input{float:left;background:#fff;width:100%;height:40px;border:1px solid #e3e3e3;border-radius:5px;padding:0 10px;}
-.set_search_box .feild_wrap .pct_box select{float:left;background:#87c442;width:100%;height:40px;border:1px solid #e3e3e3;border-radius:5px;padding:0 10px;color:#fff;}
+.set_search_box .feild_wrap .pricing_box input,
+.set_search_box .feild_wrap .pct_box select{float:left;background:#fff;width:100%;height:40px;border:1px solid #e3e3e3;border-radius:5px;padding:0 10px;}
 .set_search_box .feild_wrap .pricing_box .min,
 .set_search_box .feild_wrap .pct_box .minpct{margin-right:2.5%;}
 .set_search_box .feild_wrap .pricing_box .max,
