--- a/app/views/barcategories/new.html.erb
+++ b/app/views/barcategories/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Barcategory</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', barcategories_path %>
+<div class="layout">
+  <div class="wrap">
+    <h1>New Barcategory</h1>
+    <%= render 'form' %>
+    <%= link_to 'Back', barcategories_path %>
+  </div>
+</div>
