--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,16 @@
       gtag('config', 'UA-113637704-1');
     </script>
 
-   
+   <!-- Global site tag (gtag.js) - Google Analytics (https)-->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113637704-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-113637704-2');
+    </script>
+
 
 
   </head>
