--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -301,16 +301,21 @@ header .gnb_m,header .gnb_open2{display:none;}
 .sub_nav .gnb_m,
 .sub_nav .gnb_m>.gnb_close{display:none;}
 
+
+/* all about amazon & featured discounts */
 .deals_main_menu{margin:20px 0 5px 0;}
 .deals_main_menu ul{font-family: 'Righteous', cursive;}
 .deals_main_menu ul li{float:left;margin-right:20px;position:relative;}
+.deals_main_menu ul li.active{background:#000;color:#fff;padding:0 10px;border-radius:20px;}
 .deals_main_menu ul li a{text-decoration:none;font-size:35px;color:#000;}
-.deals_main_menu ul li a.active{background:#000;color:#fff;padding:0 10px;border-radius:20px;}
+.deals_main_menu ul li a.active{color:#fff;}
 .deals_main_menu ul li a:hover{border-bottom:3px solid;}
 .deals_main_menu ul li em{font-size:55px;display:inline-block;}
 
 @media screen and (max-width:640px){
   .deals_main_menu{text-align:center;margin-top:20px;}
+  .deals_main_menu ul li{padding:5px 0;border:1px solid;}
+  .deals_main_menu ul li.active{padding:5px 0;border-radius:0;}
   .sub_nav{}
   .shoes_nav{margin-top:20px;}
   .sub_nav .sub_nav_pc{display:none;}
@@ -336,6 +341,8 @@ header .gnb_m,header .gnb_open2{display:none;}
 
 @media screen and (min-width:641px) and (max-width:1199px){
   .deals_main_menu{margin-top:20px;}
+  .deals_main_menu ul li{padding:5px 0;border:1px solid;}
+  .deals_main_menu ul li.active{padding:5px 0;border-radius:0;}
   .sub_nav{margin-top:175px;}
   .shoes_nav{margin-top:0px;}
   .sub_nav .sub_nav_pc{display:none;}
@@ -492,6 +499,13 @@ header .gnb_m,header .gnb_open2{display:none;}
   .footer2 .footer_up ul li{width:23%;margin:0 1%;padding:2px;}
   .footer2 .footer_down ul li{margin:0 10px 5px 0;}
 }
+
+/* For Footer_m Section */
+.footer_m nav{display:flex;justify-content:space-around;background-color:#333;padding:12px;position:fixed;bottom:0;width:100%;}
+.footer_m .nav-item{display:flex;align-items:center;text-decoration:none;color:#fff;padding:12px 16px;border-radius:50px;background-color:rgba(255, 255, 255, 0);}
+.footer_m .nav-item span{width:0;overflow:hidden;}
+.footer_m .nav-item:focus{text-decoration:none;color:#fff;background-color:rgba(255, 255, 255, 0.2);transition:.2s;}
+.footer_m .nav-item:focus span{width:100%;margin-left:8px;transition:.2s;}
 
 
 /*About Us*/
@@ -746,13 +760,16 @@ a.set_reset_m{display:none;}
 .new_container nav ul li a{display:inline-block;outline:none;color:#000;text-transform:uppercase;text-decoration:none;font-size:17px;letter-spacing:1.2px;font-weight:600;}
 .new_container .logo{float:left;padding:8px 0;}
 /*.new_container .logo a{color:#000;text-transform:uppercase;font-weight:700;font-size:18px;letter-spacing:0px;text-decoration:none;display:inline-block;}*/
+.new_container .logo a img.oh_logo{height:45px;display:none;}
 .new_container .logo a img.oh_logo_big{height:45px;}
 .new_container .hidden{display:none;}
 .header_hr{margin:0;} 
 
 @media screen and (max-width:640px){
+  .new_container nav{padding:0;}
   .new_container nav ul{padding:0;margin:0;}
-  .new_container .logo a img.oh_logo_big{height:25px;}
+  .new_container .logo a img.oh_logo{height:45px;display:block;}
+  .new_container .logo a img.oh_logo_big{display:none;}
   .new_container .logo{}
   .new_container .nav-wrapper{position:fixed;top:0;left:0;width:100%;height:100%;z-index:-1;background:#fff;opacity:0;transition:all 0.2s ease;}
   .new_container .nav-wrapper ul{position:absolute;top:50%;transform:translateY(-50%);width:100%;text-align:center;}
@@ -763,7 +780,7 @@ a.set_reset_m{display:none;}
   .new_container .nav-wrapper ul li:nth-child(4) a{transition-delay:0.5s;}
   .new_container .nav-wrapper ul li:not(:first-child){margin-left:0;}
   .new_container .nav-wrapper ul li a{padding:10px 24px;opacity:0;color:#000;font-size:14px;font-weight:600;letter-spacing:1.2px;transform:translateX(-20px);transition:all 0.2s ease;}
-  .new_container .nav-btn{position:fixed;right:25px;top:2px;display:block;width:48px;height:48px;cursor:pointer;z-index:9999;border-radius:50%;} 
+  .new_container .nav-btn{position:fixed;right:25px;top:4px;display:block;width:48px;height:48px;cursor:pointer;z-index:9999;border-radius:50%;} 
   .new_container .nav-btn i{display:block;width:30px;height:4px;background:#000;border-radius:2px;margin-left:14px;}
   .new_container .nav-btn i:nth-child(1){margin-top:16px;}
   .new_container .nav-btn i:nth-child(2){margin-top:4px;opacity:1;}
