--- a/app/views/shared/_footer_m.html.erb
+++ b/app/views/shared/_footer_m.html.erb
@@ -1,3 +1,24 @@
-<div class="footer_card" style="position:fixed;bottom:0;">
-  <p>This is footer for mobile</p>
+<div class="footer_m">
+  <nav>
+    <a class="nav-item" href="#">
+      <span>Home</span>
+    </a>
+    
+    <a class="nav-item" href="#">
+      <i data-feather="activity"></i><span>Activity</span>
+    </a>
+    
+    <a class="nav-item" href="#">
+      <i data-feather="message-square"></i><span>Messages</span>
+    </a>
+    
+    <a class="nav-item" href="#">
+      <i data-feather="settings"></i><span>Settings</span>
+    </a>
+  </nav>
 </div>
+
+<script type="text/javascript">
+  feather.replace();
+  document.querySelector(".nav-item").focus();
+</script>
