--- a/app/views/shared/_hotpro_header.html.erb
+++ b/app/views/shared/_hotpro_header.html.erb
@@ -4,19 +4,20 @@
     <div class="sub_nav_pc">
       <ul class="clearfix">
        <li><a href="/deals/quick_search">Amazon Deal Finder</a></li>
+       <% if can? :update, @promocodes %><li><a href="/bargains">Featured Deals</a></li><% end %>
        <li><a href="/deals/bestdeals">Today's Discovery</a></li>
        <li><a href="/hotdeals">Deals</a></li>
        <!-- <li class="coumos1 more"><a href="/deals/bestdeals"> [ Daily Deals ]</a></li> -->
        <li><a href="/promocodes">Coupon Codes</a></li>
        <li class="todays_deal"><a target="_blank" href="https://amzn.to/2Q8uWyX">Deal of the Day</a></li>
-        <li class="todays_deal"><a target="_blank" href="https://amzn.to/2IsIyRw">Lightning Deals</a></li>
-       <!-- <li class="more"><a href="/deals/promo_codes">[ Daily Codes ]</a></li> -->
-       <!-- <li><a href="/deals/most_reviewed">Most-Reviewed</a></li> -->
-       <!-- <li class="coumos" ><a href="/deals/promotions">Sales Offer & Promotions</a></li> -->
-       <li class="new_code"><% if can? :update, @promocodes %><%= link_to 'New Code', new_promocode_path %><% end %></li>
-       <li class="new_deal"><% if can? :update, @hotdeals %><%= link_to 'New Bargain', new_hotdeal_path %><% end %></li>
-       <!-- <li class="search"><%= form_for "",url: promocodes_path, role: "search", method: :get do %><%= text_field_tag :search, @search_term, placeholder: "Search..." %><% end %></li> -->
+       <li class="todays_deal"><a target="_blank" href="https://amzn.to/2IsIyRw">Lightning Deals</a></li>
       </ul>
+      <% if can? :update, @promocodes %>
+         <div class="admin">
+           <%= link_to 'New Code', new_promocode_path %> | 
+           <%= link_to 'New Bargain', new_hotdeal_path %>
+         </div>
+       <% end %>
     </div>
     
     <!-- <div class="gnb_m">
