--- a/app/views/deals/_navbar_deals.html.erb
+++ b/app/views/deals/_navbar_deals.html.erb
@@ -5,7 +5,9 @@
       <ul class="clearfix">
         <li class="coumos1"><a href="/deals/quick_search">Amazon Deal Finder</a></li>
         <!-- <li><a href="/hotdeals">More Deals & Coupons</a></li> -->
-        <!-- <li><a href="/bargains">Featured Deals</a></li> -->
+        <% if can? :update, @recommend %>
+          <li><a href="/bargains">Featured Deals</a></li>
+        <% end %>
         <li>
           <a href="/deals/bestdeals">Today's Discovery</a>
           <ul class="down_sub clearfix">
