--- a/app/views/deals/_body_promocodes.html.erb
+++ b/app/views/deals/_body_promocodes.html.erb
@@ -178,7 +178,7 @@
       <div class="container_copy"><div class="wrap"><div class="box"><p data-copy-text=""><%= promocode.p_promocode %></p></div></div></div>
     </div>
     <div class="deal_btn promo_btn">
-      <a target="_blank" href="<%= promocode.p_link %>">Use code on AMAZON</a>
+      <a target="_blank" href="<%= promocode.p_link %>">Redeem Code</a>
     </div>
   </div>
 <% end %>
