--- a/app/views/shared/_footer2.html.erb
+++ b/app/views/shared/_footer2.html.erb
@@ -21,7 +21,7 @@
           <li><a href="/deals/quick_search">#Amazon Deals Finder</a></li>
           <li><a href="/deals/bestdeals">#Amazon Deals</a></li>
           <li><a href="/deals/promo_codes">#Amazon Coupon Codes</a></li>
-          <li><a href="/deals/storepromotions">#Featured Discounts</a></li>
+          <li><a href="/deals/storepromotions">#Stores</a></li>
           <!-- <li><a href="/deals/most_reviewed">#Most-Reviewed</a></li> -->
           
           <!-- <li><a href="/deals/promotions">#Promotions</a></li> -->
