--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -75,12 +75,12 @@
   .codes .rt_cnt .sort_box ul li a{font-size:20px;font-family: 'Anton', sans-serif;line-height:1.1;text-decoration:none;color:#000;display:block;text-align:center;padding:5px;}
   .codes .rt_cnt .sort_box ul li a:hover{background:#000;color:#fff;}
   .codes .rt_cnt .updating{font-size:30px;font-size:20px;font-family: 'Anton', sans-serif;}
-  .codes .rt_cnt .updating a{text-decoration:none;margin-left:10px;color:#fff;background:#000;padding:5px 10px;}
+  .codes .rt_cnt .updating a{text-decoration:none;color:#fff;background:#000;padding:5px 10px;display:block;margin:10px 0 0 0;}
   .codes .rt_cnt .updating_m{display:none;}
 
   .codes .deals_description{margin-bottom:15px;color:#616161;}
   .codes .card_wrap{margin:20px 0 0 0;}
-  .codes .card_wrap .card{border-bottom:1px solid #ccc;margin:0 0 15px 0;padding:20px 0 30px 0;}
+  .codes .card_wrap .card{border-bottom:1px solid #ccc;padding:20px 0;}
   .codes .card_wrap .dealofday{height:auto;}
   .codes .card_wrap .card .image_box{float:left;width:20%;height:167px;padding:1.5%;}
   .codes .card_wrap .card .image_box img{width:100%;height:167px;object-fit:contain;}
@@ -92,7 +92,7 @@
   .codes .card_wrap .card .image_box .dealtube button{vertical-align:middle;}
   .codes .card_wrap .card .image_box .dealtube button.text{color:#fff;margin-top:-3.5px;font-weight:bold;}
   .codes .card_wrap .card .image_box .dealtube img{width:25px;height:25px;margin-left:-3px;}
-  .codes .card_wrap .card .inner{font-weight:400;border-right:1px solid #ccc;border-left:1px solid #ccc;float:left;width:57%;padding:1.5%;}
+  .codes .card_wrap .card .inner{font-weight:400;border-right:1px solid #ccc;border-left:1px solid #ccc;float:left;width:57%;padding:0 1.5%;}
   .codes .card_wrap .card .inner .new_mark{color:#fff;background:#87c442;font-size:14px;padding:2px 5px;margin-right:7px;border-radius:7px;font-weight:bold;display:inline-block;}
   .codes .card_wrap .card .inner>.regular{color:#000;font-size:17px;border-bottom:2px solid #000;}
   .codes .card_wrap .card .inner>.regular>em{background:#000;padding:0 5px;color:#fff;}
@@ -166,9 +166,9 @@
   .codes .card_wrap .card .inner>.code_high .info_wrap .box p{font-size:12px;margin:5px;color:#6d6e71;}
   .codes .card_wrap .card .inner>.code_high .info_wrap .box em{font-size:20px;}
 
-  .codes .card_wrap .card .deal_btn{float:left;width:20%;text-align:center;margin:60px 1.5% 0 1.5%;}
-  .codes .card_wrap .card .promo_btn{margin-top:90px;}
-  .codes .card_wrap .card .deal_btn a{text-decoration:none;color:#000;display:inline-block;font-family: 'Montserrat', sans-serif;font-weight:bold;border:3px solid #000;padding:10px 5px;}
+  .codes .card_wrap .card .deal_btn{float:left;width:20%;text-align:center;height:209.03px;position:relative;}
+  .codes .card_wrap .card .promo_btn{height:285.03px;}
+  .codes .card_wrap .card .deal_btn a{text-decoration:none;color:#000;display:inline-block;font-family: 'Montserrat', sans-serif;font-weight:bold;border:3px solid #000;padding:10px 5px;width:80%;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);}
   .codes .card_wrap .card .deal_btn em{background:#000;color:#fff;padding:5px 11.7px;font-size:12.5px;}
   .codes .card_wrap .card .deal_btn em.stock_m{display:none;}
   .codes .card_wrap .card .deal_btn p{color:#ff3333;}
