--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -14,11 +14,11 @@
       </div><!--./lt_cnt-->
       
       <div class="rt_cnt">
-        <h2>Take the best deals with coupon codes<% if can? :update, @promocodes %><div class="hotdeals_new"><%= link_to 'New Code', new_promocode_path %></div><% end %></h2>
-        <h2 class="for_m">Coupons on Amazon<% if can? :update, @hotdeals %><div class="hotdeals_new"><%= link_to 'New Hotdeal', new_hotdeal_path %></div><% end %></h2>
-        <p class="for_m">Take the best deals with coupon codes.</p>
-        <p class="deals_description">This list of Amazon coupon codes makes it super easy for you to find great Amazon deals. Save with the verified Amazon coupon codes!! We update this list every single day so come back again for more savings!</p>
-        <%= render 'shared/amz_search' %>
+       <h2>Take the best deals with coupon codes<% if can? :update, @promocodes %><div class="hotdeals_new"><%= link_to 'New Code', new_promocode_path %></div><% end %></h2>
+       <h2 class="for_m">Coupons on Amazon<% if can? :update, @hotdeals %><div class="hotdeals_new"><%= link_to 'New Hotdeal', new_hotdeal_path %></div><% end %></h2>
+       <p class="for_m">Take the best deals with coupon codes.</p>
+       <p class="deals_description">This list of Amazon coupon codes makes it super easy for you to find great Amazon deals. Save with the verified Amazon coupon codes!! We update this list every single day so come back again for more savings!</p>
+       <!-- <%= render 'shared/amz_search' %> -->
         
         <!-- <div class="sort_box clearfix">
           <ul>
@@ -39,14 +39,14 @@
         </div>
 
         <!-- Note for Mobile -->
-        <p class="updating updating_m"><a href="/promocodes">GO TO PROMO CODES MORE</a></h2>
+        <p class="updating updating_m"><a href="/promocodes">DISCOVER PROMO CODES MORE</a>
         <div class="lt_cnt note_mobile">
           <h2>Promo Codes of Amazon</h2>
          <%= render 'deals/notes_promo_test' %>
         </div>
         <!-- End -->
 
-        <p class="updating"><a href="/promocodes">GO TO PROMO CODES MORE</a></h2>
+        <p class="updating"><a href="/promocodes">DISCOVER PROMO CODES MORE</a>
         
       </div><!--./rt_cnt-->  
 
