--- a/app/views/bargains/edit.html.erb
+++ b/app/views/bargains/edit.html.erb
@@ -1,7 +1,26 @@
 <div class="layout">
   <div class="wrap">
     <h1>Editing Bargain</h1>
-    <%= render 'form' %>
+    <div class="hotdeal_form">
+      <%= simple_form_for(@bargain) do |f| %>
+        <%= f.error_notification %>
+        <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
+        
+        <%= f.select :bar_spare_01,([["Deals?", ""], "YES"])%>
+        <%= f.select :bar_spare_02,([["Coupons?", ""], "YES"])%><br /><br />
+        <div class="basic_info">
+          <%= f.association :barcategory %>
+          <%= f.input :bar_image %>
+          <%= f.input :bar_title %>
+          <%= f.input :bar_detail %>
+          <%= f.input :bar_link %>
+        </div>
+
+        <div class="form-actions">
+          <%= f.button :submit %>
+        </div>
+      <% end %>
+    </div>
     <%= link_to 'Show', @bargain %> |
     <%= link_to 'Back', bargains_path %>
   </div>
