--- a/app/views/promocodes/show.html.erb
+++ b/app/views/promocodes/show.html.erb
@@ -3,9 +3,11 @@
   
   <div class="show_wrap clearfix">
     <div class="wrap">
-    <%= render 'shared/header_amazon' %>  
-    <%= render 'shared/hotpro_header' %>
-    <%= render 'shared/botton_amz' %>
+    <div class="oh_menu">
+      <%= render 'shared/header_amazon' %>  
+      <%= render 'shared/hotpro_header' %>
+      <%= render 'shared/botton_amz' %>
+    </div>
     
       <div class="show_box translate_box clearfix">
         
