--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -56,6 +56,13 @@ body{/*font-family: 'Noto Sans KR','맑은고딕',sans-serif;*/font-family: 'Not
 }
 
 
+/* Display:none; for Moblie */
+@media screen and (max-width:640px){
+  .oh_menu,
+  .show_wrap .show_box .show_img .mark{display:none;}
+
+}
+
 /* header */
 /*.container{margin:0 auto;max-width:1200px;}
 .arrow{display:block;width:24px;height:24px;transform:rotate(-90deg);}
@@ -475,6 +482,7 @@ header .gnb_m,header .gnb_open2{display:none;}
 .pagination .current{background:#000;color:#fff;font-size:30px;border:1px solid;padding:0 10px;}
 
 /* For Footer Section */
+
 .footer2{margin:50px 0 15px 0;width:100%;bottom:0;}
 .footer2 ul{}
 .footer2 ul li{float:left;margin-right:20px;}
@@ -486,23 +494,27 @@ header .gnb_m,header .gnb_open2{display:none;}
 .footer2 .footer_down{border-top:4px solid #000;padding:5px 0;}
 
 @media screen and (max-width:400px){
+  /*.footer_wrap{display:none;}*/
   .pagination a{margin:0 2%;}
   .footer2 .footer_up ul li a{font-size:8px;}
   .footer2 .footer_up ul li a img{width:17px;}
 }
 @media screen and (max-width:640px){
+  /*.footer_wrap{display:none;}*/
   .footer2{margin:30px 0 15px 0;}
   .footer2 .footer_up ul li{width:23%;margin:0 1%;padding:2px;}
   .footer2 .footer_down ul li{margin:0 10px 5px 0;}
 }
 
 /* For Footer_m Section */
-.footer_m nav{display:flex;justify-content:space-around;background-color:#333;padding:12px;position:fixed;bottom:0;width:100%;}
-.footer_m .nav-item{display:flex;align-items:center;text-decoration:none;color:#fff;padding:12px 16px;border-radius:50px;background-color:rgba(255, 255, 255, 0);}
-.footer_m .nav-item span{width:0;overflow:hidden;}
-.footer_m .nav-item:focus{text-decoration:none;color:#fff;background-color:rgba(255, 255, 255, 0.2);transition:.2s;}
-.footer_m .nav-item:focus span{width:100%;margin-left:8px;transition:.2s;}
-
+/*.footer_m{display:none;}*/
+@media screen and (max-width:640px){
+  .footer_m{display:block;position:fixed;height:60px;width:100%;border-top:1px solid #ccc;background:#fff;bottom:0;}
+  .footer_m ul{}
+  .footer_m ul li{float:left;width:33.33%;text-align:center;height:60px;position:relative;}
+  .footer_m ul li a{display:block;color:#000;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);}
+  
+}
 
 /*About Us*/
 .about_us{width:1000px;margin:120px auto 0 auto;font-family: 'Montserrat', sans-serif;}
