--- a/app/views/bargains/show.html.erb
+++ b/app/views/bargains/show.html.erb
@@ -2,9 +2,11 @@
 <div class="layout">
   <div class="show_wrap clearfix">
     <div class="wrap">
-    <%= render 'shared/header_amazon' %>  
-    <%= render 'shared/hotpro_header' %>
-    <%= render 'shared/botton_amz' %>
+    <div class="oh_menu">
+      <%= render 'shared/header_amazon' %>  
+      <%= render 'shared/hotpro_header' %>
+      <%= render 'shared/botton_amz' %>
+    </div>
     
       <div class="show_box clearfix">
         
