--- a/app/views/hotdeals/show.html.erb
+++ b/app/views/hotdeals/show.html.erb
@@ -1,11 +1,13 @@
 <%= render 'shared/play_video' %><!-- for play youtube video-->
 <div class="layout">
   <div class="show_wrap clearfix">
+    <!-- <a href="/hotdeals"><img class="go_back" src="<%=asset_path 'go_back.png' %>" alt="ohigottabuythis" /></a> -->
     <div class="wrap">
-    <%= render 'shared/header_amazon' %>  
-    <%= render 'shared/hotpro_header' %>
-    <%= render 'shared/botton_amz' %>
-    
+    <div class="oh_menu">
+      <%= render 'shared/header_amazon' %>  
+      <%= render 'shared/hotpro_header' %>
+      <%= render 'shared/botton_amz' %>
+    </div> 
       <div class="show_box clearfix">
         
         <!-- <p>Location Map</p> -->
