--- a/app/views/storepromotions/show.html.erb
+++ b/app/views/storepromotions/show.html.erb
@@ -2,10 +2,11 @@
   
   <div class="show_wrap clearfix">
     <div class="wrap">
-    <%= render 'shared/header_bystore' %>
-    <%= render 'deals/header_store' %>
-    <%= render 'shared/botton_store' %>
-    
+    <div class="oh_menu">
+      <%= render 'shared/header_bystore' %>
+      <%= render 'deals/header_store' %>
+      <%= render 'shared/botton_store' %>
+    </div>
       <div class="show_box clearfix">
         
         <!-- <p>Location Map</p> -->
