--- a/app/assets/stylesheets/bargain.css
+++ b/app/assets/stylesheets/bargain.css
@@ -40,6 +40,7 @@
 .bargian_inner ul li a{color:#08f;font-weight:bold;}
 .bargian_inner .btn{text-align:center;margin-top:30px;}
 .bargian_inner .btn a{display:block;background:#08f;color:#fff;padding:10px 20px;border-radius:10px;}
+.bargian_inner span.type{font-size:13px;width:30%;padding:5px;border-bottom:1px solid #ccc;margin:0;margin-bottom:10px;display:block;}
 
 
 @media screen and (max-width:640px){
