--- a/app/views/deals/_body_hotdeals.html.erb
+++ b/app/views/deals/_body_hotdeals.html.erb
@@ -150,7 +150,12 @@
      <!-- <em>*Pricing may change and deals can expire fast.</em> -->
     </div><!--/.code_high-->
   </div><!--/.inner --> 
-  <div class="deal_btn"><a target="_blank" href="<%= hotdeal.h_link %>">Shop Now</a></div>
+  <div class="pc_btn">
+    <div class="deal_btn"><a target="_blank" href="<%= hotdeal.h_link %>">Shop Now</a></div>
+  </div>
+  <div class="mobile_btn">
+    <div class="deal_btn"><a href="<%= hotdeal.h_link %>">Shop Now</a></div>
+  </div>
  </div>
 
  <% if hotdeal.h_spare_03.present? %>
