--- a/app/views/deals/_body_promocodes.html.erb
+++ b/app/views/deals/_body_promocodes.html.erb
@@ -177,8 +177,16 @@
     <div class="text_copied text_copied_m">
       <div class="container_copy"><div class="wrap"><div class="box"><p data-copy-text=""><%= promocode.p_promocode %></p></div></div></div>
     </div>
-    <div class="deal_btn promo_btn">
-      <a target="_blank" href="<%= promocode.p_link %>">Redeem Code</a>
+    <div class="pc_btn">
+      <div class="deal_btn promo_btn">
+        <a target="_blank" href="<%= promocode.p_link %>">Redeem Code</a>
+      </div>
+    </div>
+
+    <div class="mobile_btn">
+      <div class="deal_btn promo_btn">
+        <a href="<%= promocode.p_link %>">Redeem Code</a>
+      </div>
     </div>
   </div>
 <% end %>
