--- a/app/views/hotdeals/show.html.erb
+++ b/app/views/hotdeals/show.html.erb
@@ -1,7 +1,9 @@
 <%= render 'shared/play_video' %><!-- for play youtube video-->
 <div class="layout">
   <div class="show_wrap clearfix">
-    <!-- <a href="/hotdeals"><img class="go_back" src="<%=asset_path 'go_back.png' %>" alt="ohigottabuythis" /></a> -->
+    <div class="show_back">
+      <a href="/hotdeals"><img class="go_back" src="<%=asset_path 'go_back.png' %>" alt="back" /></a>
+    </div>
     <div class="wrap">
     <div class="oh_menu">
       <%= render 'shared/header_amazon' %>  
