--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -57,12 +57,19 @@ body{/*font-family: 'Noto Sans KR','맑은고딕',sans-serif;*/font-family: 'Not
 
 
 /* for Moblie */
+.show_back,
 .mobile_btn{display:none;}
+
+.show_back{}
+.show_back a{z-index:999;display:block;}
+.show_back a img{width:30px;position:absolute;top:140px;left:27px;opacity:0.5;}
+
 @media screen and (max-width:640px){
   .oh_menu,
   .show_wrap .show_box .show_img .mark{display:none;}
   .pc_btn{display:none;}
-  .mobile_btn{display:block;}
+  .mobile_btn,
+  .show_back{display:block;}
 }
 
 /* header */
@@ -770,7 +777,7 @@ a.set_reset_m{display:none;}
 .new_container nav ul li a{display:inline-block;outline:none;color:#000;text-transform:uppercase;text-decoration:none;font-size:17px;letter-spacing:1.2px;font-weight:600;}
 .new_container .logo{float:left;padding:8px 0;}
 /*.new_container .logo a{color:#000;text-transform:uppercase;font-weight:700;font-size:18px;letter-spacing:0px;text-decoration:none;display:inline-block;}*/
-.new_container .logo a img.oh_logo{height:45px;display:none;}
+/*.new_container .logo a img.oh_logo{height:45px;display:none;}*/
 .new_container .logo a img.oh_logo_big{height:45px;}
 .new_container .hidden{display:none;}
 .header_hr{margin:0;} 
@@ -778,8 +785,8 @@ a.set_reset_m{display:none;}
 @media screen and (max-width:640px){
   .new_container nav{padding:0;}
   .new_container nav ul{padding:0;margin:0;}
-  .new_container .logo a img.oh_logo{height:45px;display:block;}
-  .new_container .logo a img.oh_logo_big{display:none;}
+  /*.new_container .logo a img.oh_logo{height:45px;display:block;}*/
+  .new_container .logo a img.oh_logo_big{height:20px;margin-top:10px;}
   .new_container .logo{}
   .new_container .nav-wrapper{position:fixed;top:0;left:0;width:100%;height:100%;z-index:-1;background:#fff;opacity:0;transition:all 0.2s ease;}
   .new_container .nav-wrapper ul{position:absolute;top:50%;transform:translateY(-50%);width:100%;text-align:center;}
@@ -790,7 +797,7 @@ a.set_reset_m{display:none;}
   .new_container .nav-wrapper ul li:nth-child(4) a{transition-delay:0.5s;}
   .new_container .nav-wrapper ul li:not(:first-child){margin-left:0;}
   .new_container .nav-wrapper ul li a{padding:10px 24px;opacity:0;color:#000;font-size:14px;font-weight:600;letter-spacing:1.2px;transform:translateX(-20px);transition:all 0.2s ease;}
-  .new_container .nav-btn{position:fixed;right:25px;top:4px;display:block;width:48px;height:48px;cursor:pointer;z-index:9999;border-radius:50%;} 
+  .new_container .nav-btn{position:fixed;right:25px;top:1px;display:block;width:48px;height:48px;cursor:pointer;z-index:9999;border-radius:50%;} 
   .new_container .nav-btn i{display:block;width:30px;height:4px;background:#000;border-radius:2px;margin-left:14px;}
   .new_container .nav-btn i:nth-child(1){margin-top:16px;}
   .new_container .nav-btn i:nth-child(2){margin-top:4px;opacity:1;}
