--- a/app/views/gadgets/show.html.erb
+++ b/app/views/gadgets/show.html.erb
@@ -1,6 +1,9 @@
 <%= render 'shared/play_video' %><!-- for play youtube video-->
 <div class="layout">
   <div class="show_wrap clearfix">
+    <div class="show_back">
+      <a href="/gadgets"><img class="go_back" src="<%=asset_path 'go_back.png' %>" alt="back" /></a>
+    </div>
     <div class="wrap">
         
       <div class="show_box clearfix">
