--- a/app/views/storepromotions/show.html.erb
+++ b/app/views/storepromotions/show.html.erb
@@ -1,6 +1,9 @@
 <div class="layout">
   
   <div class="show_wrap clearfix">
+    <div class="show_back">
+      <a href="/storepromotions"><img class="go_back" src="<%=asset_path 'go_back.png' %>" alt="back" /></a>
+    </div>
     <div class="wrap">
     <div class="oh_menu">
       <%= render 'shared/header_bystore' %>
