--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -60,7 +60,7 @@ body{/*font-family: 'Noto Sans KR','맑은고딕',sans-serif;*/font-family: 'Not
 .show_back,
 .mobile_btn{display:none;}
 
-.show_back{position:absolute;top:-10px;left:27px;opacity:0.5;}
+.show_back{position:absolute;top:-10px;left:27px;opacity:0.5;z-index:999;}
 .show_back a{}
 .show_back a img{width:30px;}
 
